--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -3,9 +3,10 @@
   <% if current_user && current_user.technician? %>
     <%= render "shared/sidebar_button", text: "Disponibilités", icon: "calendar", link: [@user.role, :availabilities] %>
     <%= render "shared/sidebar_button", text: "Clients", icon: "group", link: [@user.role, :users]%>
-  <% elsif current_user && current_user.manager? %>
-    <%= render "shared/sidebar_button", text: "Mon équipe", icon: "calendar", link: [@user.role, :availabilities] %>
-    <%= render "shared/sidebar_button", text: "Planning", icon: "calendar-check-o", link: manager_planning_path %>
+  <% elsif current_manager %>
+    <%= render "shared/sidebar_button", text: "Mon équipe",  icon: "calendar",         link: manager_availabilities_path %>
+    <%= render "shared/sidebar_button", text: "Planning",    icon: "calendar-check-o", link: manager_planning_path       %>
+    <%= render "shared/sidebar_button", text: "Techniciens", icon: "calendar-check-o", link: manager_technicians_path       %>
   <% end %>
   <%#= render "shared/sidebar_button", text: "Bookings", icon: "list", link: [@user.role, :bookings] %>
   <%#= render "shared/sidebar_button", text: "Profil", icon: "user", link: [@user.role, @user] %>
