--- a/app/views/manager/technicians/index.html.erb
+++ b/app/views/manager/technicians/index.html.erb
@@ -1,1 +1,44 @@
-test
+<div class="dashboard-wrap">
+  <%= render "/shared/sidebar"%>
+  <div class="dashboard-content">
+    <div class="padding-box">
+      <div class="card-container">
+        <table id="table" class="table table-hover hidden-xs">
+          <thead>
+            <h4 class="hidden-xs"><strong>Liste de vos techniciens</strong></h4>
+            <tr>
+              <th scope="col">Nom</th>
+              <th scope="col">Prénom</th>
+              <th scope="col">Email</th>
+              <th scope="col">Crée le </th>
+              <th scope="col">Modifié le</th>
+              <th scope="col"></th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @technicians.each do |tech| %>
+              <tr>
+                <td scope="col"><%= tech.last_name  %></td>
+                <td scope="col"><%= tech.first_name %></td>
+                <td scope="col"><%= tech.email      %></td>
+                <td scope="col"><%= l tech.created_at, format: :short %></td>
+                <td scope="col"><%= l tech.updated_at, format: :short %></td>
+                <td scope="col">
+                 <%= link_to 'Modifier', edit_manager_technician_path(tech) %>
+                 <%= link_to 'Détails',  manager_technician_path(tech)      %>
+                </td>
+              </tr>
+            <% end %>
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</div>
+<%= content_for :after_js do %>
+  <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs/dt-1.10.16/datatables.min.css"/>
+  <script type="text/javascript" src="https://cdn.datatables.net/v/bs/dt-1.10.16/datatables.min.js"></script>
+  <script>
+    $('#table').DataTable();
+  </script>
+<% end %>
