Finish technicians controller.

--- a/app/views/manager/technicians/index.html.erb
+++ b/app/views/manager/technicians/index.html.erb
@@ -3,6 +3,7 @@
   <div class="dashboard-content">
     <div class="padding-box">
       <div class="card-container">
+        <%= link_to 'Créer', new_manager_technician_path, class: 'btn' %>
         <table id="table" class="table table-hover hidden-xs">
           <thead>
             <h4 class="hidden-xs"><strong>Liste de vos techniciens</strong></h4>
