Comment calendar display.

--- a/app/views/manager/availabilities/index.html.erb
+++ b/app/views/manager/availabilities/index.html.erb
@@ -17,7 +17,7 @@
         <% @techs.each do |tech| %>
             <div role="tabpanel" class="tab-pane <%= tech == @techs.first ? "active" : "" %>" id="tech-<%= tech.id %>">
               <div id="<%= tech.first_name %>_events_calendar">
-                <%= render "shared/calendar", availabilities: @availabilities.of(tech), tech: tech %>
+                <%#= render "shared/calendar", availabilities: @availabilities.of(tech), tech: tech %>
               </div>
             </div>
         <% end %>
