Duplicate mockup content.

--- a/app/views/manager/planning/index.html.erb
+++ b/app/views/manager/planning/index.html.erb
@@ -1,3 +1,4 @@
+<br />
 <div class='container'>
   <ul class="nav nav-tabs">
     <li class="active"><a href="#vueGenerale">Vue générale</a></li>
@@ -7,7 +8,7 @@
   </ul>
   <div class='tab-content'>
     <div id="vueGenerale" class="tab-pane fade in active planning">
-      <div class='row'>
+      <div class='row rowHeading'>
         <div class='col-md-2'>TECH</div>
         <div class='col-md-2'>Lundi</div>
         <div class='col-md-2'>Mardi</div>
@@ -16,31 +17,82 @@
         <div class='col-md-2'>Vendredi</div>
       </div>
       <div class='row rowAvailability'>
-        <div class='col-md-2'>PATHE</div>
         <div class='col-md-2'>
-          <div class='panel panel-default'> <div class='panel-body'>TEST</div> </div>
-          <div class='panel panel-success'> <div class='panel-body'>TEST</div> </div>
+          <p class='technicianName'> PATHE </p>
         </div>
         <div class='col-md-2'>
-          <div class='panel panel-default'> <div class='panel-body'>TEST</div> </div>
-          <div class='panel panel-default'> <div class='panel-body'>TEST</div> </div>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+          <div class='panel panel-success'> <div class='panel-heading'>TEST</div> </div>
         </div>
         <div class='col-md-2'>
-          <div class='panel panel-default'> <div class='panel-body'>TEST</div> </div>
-          <div class='panel panel-default'> <div class='panel-body'>TEST</div> </div>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
         </div>
         <div class='col-md-2'>
-          <div class='panel panel-default'> <div class='panel-body'>TEST</div> </div>
-          <div class='panel panel-default'> <div class='panel-body'>TEST</div> </div>
+          <div class='panel panel-danger'> <div class='panel-heading'>TEST</div> </div>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
         </div>
         <div class='col-md-2'>
-          <div class='panel panel-default'> <div class='panel-body'>TEST</div> </div>
-          <div class='panel panel-default'> <div class='panel-body'>TEST</div> </div>
+          <div class='panel panel-warning'> <div class='panel-heading'>TEST</div> </div>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
         </div>
-
+        <div class='col-md-2'>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+        </div>
+      </div>
+      <div class='row rowAvailability'>
+        <div class='col-md-2'>
+          <p class='technicianName'>Cyril</p>
+        </div>
+        <div class='col-md-2'>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+          <div class='panel panel-success'> <div class='panel-heading'>TEST</div> </div>
+        </div>
+        <div class='col-md-2'>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+        </div>
+        <div class='col-md-2'>
+          <div class='panel panel-danger'> <div class='panel-heading'>TEST</div> </div>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+        </div>
+        <div class='col-md-2'>
+          <div class='panel panel-warning'> <div class='panel-heading'>TEST</div> </div>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+        </div>
+        <div class='col-md-2'>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+        </div>
+      </div>
+      <div class='row rowAvailability'>
+        <div class='col-md-2'>
+          <p class='technicianName'>Jules</p>
+        </div>
+        <div class='col-md-2'>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+          <div class='panel panel-success'> <div class='panel-heading'>TEST</div> </div>
+        </div>
+        <div class='col-md-2'>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+        </div>
+        <div class='col-md-2'>
+          <div class='panel panel-danger'> <div class='panel-heading'>TEST</div> </div>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+        </div>
+        <div class='col-md-2'>
+          <div class='panel panel-warning'> <div class='panel-heading'>TEST</div> </div>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+        </div>
+        <div class='col-md-2'>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+          <div class='panel panel-default'> <div class='panel-heading'>TEST</div> </div>
+        </div>
       </div>
     </div>
-    <div id="techniciens" class="tab-pane fade in active">
+    <div id="techniciens" class="tab-pane fade in">
       <h3>Technicien</h3>
     </div>
   </div>
