--- a/app/views/manager/planning/index.html.erb
+++ b/app/views/manager/planning/index.html.erb
@@ -1,10 +1,10 @@
 <br />
 <div class='container'>
   <ul class="nav nav-tabs">
-    <li class="active"><a href="#vueGenerale">Vue générale</a></li>
+    <li class="active"><a data-toggle='tab' href="#vueGenerale">Vue générale</a></li>
     <li><a data-toggle='tab' href="#techniciens">Technicien 1</a></li>
-    <li><a data-toggle='tab' href="#">Technicien 2</a></li>
-    <li><a data-toggle='tab' href="#">Technicien 3</a></li>
+    <li><a data-toggle='tab' href="#techniciens">Technicien 2</a></li>
+    <li><a data-toggle='tab' href="#techniciens">Technicien 3</a></li>
   </ul>
   <div class='tab-content'>
     <div id="vueGenerale" class="tab-pane fade in active planning">
