Still mocking up new bookings page.

--- a/app/views/manager/bookings/show.html.erb
+++ b/app/views/manager/bookings/show.html.erb
@@ -16,7 +16,20 @@
         </div>
       </div>
       <div class="col-xs-12 col-md-6">
-        <%#= render "shared/booking_details", booking: @booking %>
+        <div class= "card-container">
+          <div class='row'>
+            <div class='col-md-3 text-center'>IMG</div>
+            <div class='col-md-5'>
+              <p>Entreprise A</p>
+              <p>Nom du contact</p>
+              <small>Adresse de l'entreprise</small>
+            </div>
+            <div class='col-md-4'>
+              <p><i class='fa fa-map-marker'></i> 22km</p>
+              <p><i class='fa fa-star'></i> 4.2</p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
