Stilll mocking up show booking page.

--- a/app/views/manager/bookings/show.html.erb
+++ b/app/views/manager/bookings/show.html.erb
@@ -30,6 +30,21 @@
             </div>
           </div>
         </div>
+        <div class='row'>
+          <div class='col-md-6'>
+            <div class= "card-container">
+              <h6>Intervention</h6>
+              <p><i class='fa fa-map-marker'></i> 1 rue de l'intervention</p>
+              <p><i class='fa fa-user'></i> Michel ChefChantier</p>
+              <p><i class='fa fa-phone'></i> 00 22 08 98 99</p>
+            </div>
+          </div>
+          <div class='col-md-6'>
+            <div class= "card-container">
+              <h6>Détails</h6>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
