Better mockup of show booking page.

--- a/app/views/manager/bookings/show.html.erb
+++ b/app/views/manager/bookings/show.html.erb
@@ -42,6 +42,27 @@
           <div class='col-md-6'>
             <div class= "card-container">
               <h6>Détails</h6>
+              <p>Longueur: 400m</p>
+              <p>Largeur:  900m</p>
+            </div>
+          </div>
+        </div>
+        <div class='row'>
+          <div class='col-md-6'>
+            <div class= "card-container">
+              <h6>Documents</h6>
+              <p><i class='fa fa-file'></i>  <%= link_to 'Bon de commande', '#'%></p>
+              <p><i class='fa fa-file'></i>  <%= link_to 'Plans', '#'%></p>
+            </div>
+          </div>
+          <div class='col-md-6'>
+            <div class= "card-container">
+              <h6>Techniciens</h6>
+              <p><i class='fa fa-user'></i> Pathé TECH</p>
+              <p><i class='fa fa-phone'></i> 00 22 08 98 99</p>
+
+              <p><i class='fa fa-user'></i> Jules TECH</p>
+              <p><i class='fa fa-phone'></i> 00 22 08 98 99</p>
             </div>
           </div>
         </div>
