--- a/app/views/manager/bookings/new.html.erb
+++ b/app/views/manager/bookings/new.html.erb
@@ -14,6 +14,7 @@
         <%= f.input :send_confirmation_email, label: "Envoyer mail de confirmation", as: :boolean %>
       </div>
     </div>
-  <%= f.submit 'Enregistrer la réservation' %>
+    <%= react_component 'HelloWorld' %>
+    <%= f.submit 'Enregistrer la réservation' %>
   <% end %>
 </div>
