--- a/app/views/manager/bookings/new.html.erb
+++ b/app/views/manager/bookings/new.html.erb
@@ -11,10 +11,12 @@
         <%= f.input :reference, label: "Numéro d'affaire" %>
         <%#= f.input :company_id, label: "Produit", collection: @products.to_a, label_method: lambda { |product| "#{product.label}" } %>
         <%= f.input :pdf, label: "Bon de commande", as: :attachinary %>
-        <%= f.input :send_confirmation_email, label: "Envoyer mail de confirmation", as: :boolean %>
       </div>
     </div>
     <%= react_component 'HelloWorld' %>
-    <%= f.submit 'Enregistrer la réservation' %>
+    <div class='text-center'>
+      <%= f.input :send_confirmation_email, label: "Envoyer mail de confirmation", as: :boolean %>
+      <%= f.submit 'Enregistrer la réservation' %>
+    </div>
   <% end %>
 </div>
