--- a/app/assets/stylesheets/components/_table_availability.scss
+++ b/app/assets/stylesheets/components/_table_availability.scss
@@ -3,6 +3,7 @@
   td {
     text-align: right;
     background-color: white;
+    border: 1px solid #ccc;
 
     &.success {
       background-color: green;
@@ -18,6 +19,10 @@
 
     &.tech {
       vertical-align: middle;
+    }
+
+    input[type='checkbox'] {
+      height: auto !important;
     }
 
   }
