--- a/app/views/manager/bookings/new.html.erb
+++ b/app/views/manager/bookings/new.html.erb
@@ -1,4 +1,7 @@
 <div class='container'>
+  <div class='text-center'>
+    <h1>Créer une réservation</h1>
+  </div>
   <%= simple_form_for [:manager, @booking] do |f| %>
     <div class='row'>
       <div class='col-md-6'>
