Load application js pack.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <%= cloudinary_js_config %>
     <%= javascript_include_tag "https://cdn.jsdelivr.net/algoliasearch/3/algoliasearch.min.js" %>
     <%= javascript_include_tag "https://cdn.jsdelivr.net/autocomplete.js/0/autocomplete.min.js" %>
-    <%= javascript_pack_tag    "hello-world-bundle" %>
+    <%= javascript_pack_tag    "application" %>
     <%= yield(:after_js) %>
   </body>
 </html>
