--- a/app/views/manager/dashboards/show.html.erb
+++ b/app/views/manager/dashboards/show.html.erb
@@ -13,7 +13,7 @@
             <h4><strong>Détections du jour</strong></h4>
             <% unless @todays_bookings.nil? %>
             <% @todays_bookings.each do |booking| %>
-            <%= render "shared/booking_card", booking: booking %>
+            <%#= render "shared/booking_card", booking: booking %>
             <% end %>
             <% end %>
           </div>
@@ -27,7 +27,7 @@
           <p>Aucune demande en attente</p>
           <% else %>
           <% @pending_bookings.each do |booking| %>
-          <%= render "shared/booking_card", booking: booking %>
+          <%#= render "shared/booking_card", booking: booking %>
           <% end %>
           <% end %>
         </div>
