--- a/app/views/manager/bookings/new.html.erb
+++ b/app/views/manager/bookings/new.html.erb
@@ -7,7 +7,7 @@
       <div class='col-md-6'>
         <%= f.fields_for :address_attributes do |ff| %>
           <div data-controller='address'>
-            <%= ff.input :address1, label: "Adresse", input_html: {data: {'action': "keyup->address#search"}, target: 'address.search'} %>
+            <%= ff.input :address1, label: "Adresse", input_html: {data: {'action': "keyup->address#search", target: 'address.search'}} %>
           </div>
         <% end %>
         <%= f.input :product_id, label: "Produit", collection: @products.to_a, label_method: lambda { |product| "#{product.label}" } %>
