--- a/app/views/manager/bookings/new.html.erb
+++ b/app/views/manager/bookings/new.html.erb
@@ -17,11 +17,12 @@
         <%= f.input :reference,  label: "Numéro d'affaire" %>
         <div>
           <%= f.input :company_id, label: "Client",           collection: Company.all %>
-          <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modalClientAttributes">
-            Launch demo modal
-          </button>
+          <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modalClientAttributes"> Nouveau</button>
         </div>
+        <div>
         <%= f.input :foreman_id, label: "Chef de chantier", collection: Foreman.all %>
+        <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modalForemanAttributes">Nouveau</button>
+        </div>
         <%= f.input :pdf, label: "Bon de commande", as: :attachinary %>
       </div>
     </div>
@@ -35,13 +36,9 @@
                 <td rowspan='2' class='tech'><%= item.first_name %></td>
                <% else %>
                  <% if item.booking %>
-                   <td class='danger'>
-                     <%= item.booking.company.name %>
-                   </td>
+                   <td class='danger'> <%= item.booking.company.name %> </td>
                  <% else %>
-                   <td>
-                     <%= check_box_tag 'booking[availability_ids][]', item.id, false %>
-                   </td>
+                   <td> <%= check_box_tag 'booking[availability_ids][]', item.id, false %> </td>
                  <% end %>
                <% end %>
             <% end %>
@@ -50,7 +47,6 @@
         <% end %>
       </tbody>
     </table>
-    <%= react_component 'HelloWorld' %>
     <div class='text-center'>
       <%= f.input :send_confirmation_email, label: "Envoyer mail de confirmation", as: :boolean %>
       <%= f.submit 'Enregistrer la réservation' %>
@@ -60,7 +56,7 @@
         <div class="modal-content">
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">Modal title</h4>
+            <h4 class="modal-title" id="myModalLabel">Créer un nouveau client</h4>
           </div>
           <div class="modal-body">
             <%= f.fields_for :company_attributes do |ff| %>
@@ -71,8 +67,30 @@
             <% end %>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn btn-default" data-dismiss="modal">Terminé</button>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="modal fade" id="modalForemanAttributes" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">Créer un nouveau chef de chantier</h4>
+          </div>
+          <div class="modal-body">
+            <%= f.fields_for :foreman_attributes do |ff| %>
+              <div data-controller='address'>
+                <%= ff.input :first_name, label: "Prénom" %>
+                <%= ff.input :last_name,  label: "Nom" %>
+                <%= ff.input :phone,      label: "Téléphone" %>
+                <%= ff.input :service_provider_id, as: :hidden, input_html: {value: current_manager.service_provider_id } %>
+              </div>
+            <% end %>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Terminé</button>
           </div>
         </div>
       </div>
