--- a/app/assets/stylesheets/components/_table_availability.scss
+++ b/app/assets/stylesheets/components/_table_availability.scss
@@ -1,4 +1,9 @@
 .tableAvailabilities {
+  th, td {
+    text-align: right;
+    background-color: white;
+    border: 1px solid #ccc;
+  }
 
   td {
     text-align: right;
